SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/Barrels_Allocated_in_Previous_Time_Inter__c.field-meta.xml
<CustomField>
        <fullName>Barrels_Allocated_in_Previous_Time_Inter__c</fullName>
        <description>PS-MC-SB-108 to maintain previos barrel allocations</description>
        <label>Barrels Allocated in Previous Time Inter</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>