SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/Barrels_Carried_Over__c.field-meta.xml
<CustomField>
        <fullName>Barrels_Carried_Over__c</fullName>
        <description>PS-MC-SB-108 to maintain carry forward barrels</description>
        <label>Barrels Carried Over</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>