SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/Change_Type__c.field-meta.xml
<CustomField>
        <fullName>Change_Type__c</fullName>
        <description>It is used to differentiate that whether the transfer or modification is taking place in the system</description>
        <label>Change Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Modify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>