SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/From_Distributor_Allocation__c.field-meta.xml
<CustomField>
        <fullName>From_Distributor_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the distributor allocation from/on which transfer/modification will happen.</description>
        <label>From Distributor Allocation</label>
        <referenceTo>Brand_Country_Region_State_Dist_Alloc__c</referenceTo>
        <relationshipLabel>Allocation Loggers</relationshipLabel>
        <relationshipName>Allocation_Loggers</relationshipName>
        <type>Lookup</type>
    </CustomField>