SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/From_Distributor_Allocation_Name__c.field-meta.xml
<CustomField>
        <fullName>From_Distributor_Allocation_Name__c</fullName>
        <formula>From_Distributor_Allocation__r.Brand_Country_Region_State_Allocation__r.Name &amp; "~" &amp;  From_Distributor_Allocation__r.Account__r.Name</formula>
        <label>From Distributor Allocation</label>
        <type>Text</type>
    </CustomField>