SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/From_Original_Allocation__c.field-meta.xml
<CustomField>
        <fullName>From_Original_Allocation__c</fullName>
        <description>This field stores the original allocation per interval value while transferring/modifying the allocations.</description>
        <label>From Leaf Node Original Allocation</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>