SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/From_Region_Allocation__c.field-meta.xml
<CustomField>
        <fullName>From_Region_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the region allocation from/on which transfer/modification will happen.</description>
        <label>From Region Allocation</label>
        <referenceTo>Brand_Country_Region_Allocation__c</referenceTo>
        <relationshipLabel>Allocation Loggers</relationshipLabel>
        <relationshipName>Allocation_Loggers</relationshipName>
        <type>Lookup</type>
    </CustomField>