SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/New_Allocation_Previous_Barrels_Carry__c.field-meta.xml
<CustomField>
        <fullName>New_Allocation_Previous_Barrels_Carry__c</fullName>
        <description>PS_MC-SB-108 to maintain total allocation for new time interval</description>
        <label>New Allocation (Previous Barrels + Carry</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>