SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/Previous_Allocation_for_Leaf_Node_for_N__c.field-meta.xml
<CustomField>
        <fullName>Previous_Allocation_for_Leaf_Node_for_N__c</fullName>
        <description>PS-MC-SB-108 to maintain barrels for new allocation</description>
        <label>Previous Allocation for Leaf Node (for N</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>