SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/To_Distributor_Allocation__c.field-meta.xml
<CustomField>
        <fullName>To_Distributor_Allocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the distributor allocation on which transfer will happen.</description>
        <label>To Distributor Allocation</label>
        <referenceTo>Brand_Country_Region_State_Dist_Alloc__c</referenceTo>
        <relationshipLabel>Allocation Loggers (To Distributor Allocation)</relationshipLabel>
        <relationshipName>Allocation_Loggers1</relationshipName>
        <type>Lookup</type>
    </CustomField>