SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/To_Distributor_Allocation_Name__c.field-meta.xml
<CustomField>
        <fullName>To_Distributor_Allocation_Name__c</fullName>
        <formula>To_Distributor_Allocation__r.Brand_Country_Region_State_Allocation__r.Name &amp; "~" &amp;  To_Distributor_Allocation__r.Account__r.Name</formula>
        <label>To Distributor Allocation</label>
        <type>Text</type>
    </CustomField>