SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/To_Leaf_Node_New_Allocation__c.field-meta.xml
<CustomField>
        <fullName>To_Leaf_Node_New_Allocation__c</fullName>
        <formula>To_Original_Allocation__c  +  Allocation_Changed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Leaf Node New Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>