SFUSA/force-app/main/default/objects/Allocation_Logger__c/fields/To_Original_Allocation__c.field-meta.xml
<CustomField>
        <fullName>To_Original_Allocation__c</fullName>
        <description>This field stores the original allocation per interval value for receiving allocation record.</description>
        <label>To Leaf Node Original Allocation</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>